--- a/style/orange.css
+++ b/style/orange.css
@@ -56,3 +56,114 @@ ul.jwts_tabbernav li a:active{color: #000;}
     padding: 0 5px 3px 5px;
 }
 
+/* Easy Responsive Tabs */
+
+
+
+.resp-tabs-container {
+    background-color: #fff;
+}
+
+.resp-tab-active {
+    border: 1px solid orange !important;
+    border-top: 4px solid orange !important;
+    border-bottom: 0px #fff solid !important;
+}
+
+.resp-tab-active {
+    background-color: #fff;
+}
+
+.resp-tab-content {
+    border: 1px solid #c1c1c1;
+    border-top-color: orange;
+}
+
+h2.resp-accordion {
+    font-size: 13px;
+    border: 1px solid #c1c1c1;
+    border-top: 0px solid #c1c1c1;
+    margin: 0px;
+    padding: 10px 15px;
+}
+
+h2.resp-tab-active {
+    border-bottom: 0px solid #c1c1c1 !important;
+}
+
+
+
+/*-----------Vertical tabs-----------*/
+
+
+
+.resp-vtabs .resp-tabs-container {
+    background-color: #fff;
+    border: 1px solid orange;
+}
+
+
+.resp-vtabs li.resp-tab-active { 
+border: 1px solid orange !important;
+border-left: 4px solid orange !important;
+border-right: 1px #FFF solid !important;
+}
+
+.resp-arrow {
+    width: 0;
+    height: 0;
+    float: right;
+    margin-top: 3px;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 12px solid #c1c1c1;
+}
+
+/*-----------Accordion styles-----------*/
+h2.resp-tab-active {
+    background: #DBDBDB;/* !important;*/
+}
+
+
+.resp-easy-accordion .resp-tab-content {
+    border: 1px solid #c1c1c1;
+}
+
+.resp-easy-accordion .resp-tab-content:last-child {
+    border-bottom: 1px solid #c1c1c1;/* !important;*/
+}
+
+h2.resp-accordion:first-child {
+    border-top: 1px solid #c1c1c1;/* !important;*/
+}
+
+/*Here your can change the breakpoint to set the accordion, when screen resolution changed*/
+@media only screen and (max-width: 768px) {
+    ul.resp-tabs-list {
+        display: none;
+    }
+
+    h2.resp-accordion {
+        display: block;
+    }
+
+    .resp-vtabs .resp-tab-content {
+        border: 1px solid #C1C1C1;
+    }
+
+    .resp-vtabs .resp-tabs-container {
+        border: none;
+        float: none;
+        width: 100%;
+        min-height: 100px;
+        clear: none;
+    }
+
+    .resp-accordion-closed {
+        display: none !important;
+    }
+
+    .resp-vtabs .resp-tab-content:last-child {
+        border-bottom: 1px solid #c1c1c1 !important;
+    }
+}
